// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAll should render Tooltip title based on allTabSelected 1`] = `
<div
  role="tooltip"
  style="position: fixed; top: 8px; left: 8px; transform: none; z-index: 1500; pointer-events: none; padding: 4px 8px; border-radius: 4px; font-size: 0.75rem; line-height: 1.4; max-width: 300px; background-color: rgba(33, 33, 33, 0.92); color: rgb(255, 255, 255); white-space: pre-wrap; word-wrap: break-word;"
>
  Unselect all tabs
</div>
`;

exports[`SelectAll should render Tooltip title based on allTabSelected 2`] = `
<div
  role="tooltip"
  style="position: fixed; top: 8px; left: 8px; transform: none; z-index: 1500; pointer-events: none; padding: 4px 8px; border-radius: 4px; font-size: 0.75rem; line-height: 1.4; max-width: 300px; background-color: rgba(33, 33, 33, 0.92); color: rgb(255, 255, 255); white-space: pre-wrap; word-wrap: break-word;"
>
  Select all tabs
</div>
`;

exports[`SelectAll should render correct components 1`] = `
<div>
  <span
    class="flex h-10 w-10 shrink-0 items-center justify-center"
    style="width: 30px; height: 30px;"
  >
    <span
      class="relative inline-flex items-center justify-center shrink-0 rounded-full transition-[box-shadow] duration-150"
      style="width: 30px; height: 30px; padding: 5px;"
    >
      <input
        aria-label="Unselect all tabs"
        checked=""
        class="absolute inset-0 m-0 cursor-pointer opacity-0"
        style="width: 100%; height: 100%;"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        fill="#1a73e8"
        height="20"
        viewBox="0 0 24 24"
        width="20"
      >
        <path
          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </span>
  </span>
</div>
`;
